K1J-2190: Simplified enum conversion + spotless